**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-11

* plot.mrf.smooth modified to allow passing '...' argument.

* 'negbin' modified to avoid spurious warnings on initialization call.

1.7-10

* fix stupid bug in 1.7-9 that lost term labels in plot.gam.

1.7-9

* rather lovely plot method added for splines on the sphere.

* plot.gam modified to allow 'scheme' to be specified for plots, to easily
  select different plot looks.

* schemes added for default smooth plotting method, modified for mrfs and 
  factor-smooth interactions.

* mgcv function deprected, since magic and gam are much better (let me know 
  if this is really a problem).  

1.7-8

* gamm.setup fix. Bug introduced in 1.7-7 whereby gamm with no smooths would
  fail.

* gamm gives returned object a class "gamm"


1.7-7

* "fs" smooth factor interaction class introduced, for smooth factor 
  interactions where smoothing parameters are same at each factor level.
  Very efficient with gamm, so good for e.g. individual subject smooths.

* qq.gam default method modified for increased power.

* "re" terms now allowed as tensor product marginals.

* log saturated likelihoods modified w.r.t. weight handling, so that weights
  are treated as modifying the scale parameter, when scale parameter is free.
  i.e. obs specific scale parameter is overall scale parameter divided by 
  obs weight. This ensures that when the scale parameter is free, RE/ML based
  inference is invariant to multiplicative rescaling of weights. 

* te and t2 now accept lists for 'm'. This allows more flexibility with 
  marginals that can have vector 'm' arguments (Duchon splines, P splines).   

* minor mroot fix/gam.reparam fix. Could declare symmetric matrix 
  not symmetric and halt gam fit.

* argument sparse added to bam to allow exploitation of sparsity in fitting,
  but results disappointing.

* "mrf" now evaluates rank of penalty null space numerically (previously 